@@ -16,6 +16,9 @@ dpkg (1.16.3) UNRELEASED; urgency=low
     Suggested by Peter Eisentraut <petere@debian.org>.
   * Document in dpkg-query(1) that commands producing multiple paragraphs
     will preserve the order of the packages specified on the argument list.
+  * Change start-stop-daemon --exec on GNU/Hurd, FreeBSD, NetBSD, OpenBSD
+    and Solaris to check for executables matching device and inode numbers
+    instead of filenames.
 
   [ Helge Kreutzmann ]
   * Fix a typo in man/dpkg-buildflags.1.
